k3s/generated_manifests/tinyauth/Namespace-tinyauth.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: tinyauth
