k3s/generated_manifests/tinyauth/Deployment-tinyauth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tinyauth
  namespace: tinyauth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tinyauth
  template:
    metadata:
      labels:
        app: tinyauth
    spec:
      containers:
        - env:
            - name: TINYAUTH_APPURL
              value: https://tinyauth.doma.lol
            - name: TINYAUTH_AUTH_USERSFILE
              value: /run/tinyauth/users
          image: ghcr.io/steveiliop56/tinyauth:v5
          name: tinyauth
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - mountPath: /run/tinyauth
              name: users
              readOnly: true
      volumes:
        - name: users
          secret:
            items:
              - key: users
                path: users
            secretName: tinyauth-users
