k3s/generated_manifests/tinyauth/Service-tinyauth-tailscale.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: tinyauth.doma.lol
    external-dns.alpha.kubernetes.io/target: homelab.boreal-scala.ts.net
  name: tinyauth-tailscale
  namespace: tinyauth
spec:
  clusterIP: None
  type: ClusterIP
