k3s/generated_manifests/tinyauth/Service-tinyauth.yaml
apiVersion: v1
kind: Service
metadata:
  name: tinyauth
  namespace: tinyauth
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app: tinyauth
  type: ClusterIP
