k3s/generated_manifests/tinyauth/Ingress-tinyauth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tinyauth
  namespace: tinyauth
spec:
  ingressClassName: traefik
  rules:
    - host: tinyauth.doma.lol
