k3s/generated_manifests/tinyauth/IngressRoute-tinyauth.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tinyauth
  namespace: tinyauth
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`tinyauth.doma.lol`)
      services:
        - name: tinyauth
          port: 80
